# matter_extension

./: .gitignore  .gitmodules  AGENTS.md  CODEOWNERS  Jenkinsfile  LICENSE  Makefile  README.md  board_compatibility_matrix.html  conanfile.py  conanfile_app.py  conanfile_sample_app.py  conanfile_stack.py  matter.slce  matter.slce.extra  matter.slsdk  matter_demos.xml  matter_dependencies.slt  matter_docs.xml  matter_templates.xml  pipeline_metadata.yml  rebuild.sh  requirements.txt  sample_app_pkg.slt  sonar-project.properties  upgrade.slcu
.cursor/rules/: cpp-rules.mdc  general-rules.mdc  python-rules.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  TOKEN_PERMISSIONS.md  copilot-instructions.md  cpp-instructions.md  dependabot.yml  python-instructions.md  silabs-builds-917-ncp-dual-stack.json  silabs-builds-917-ncp.json  silabs-builds-mg24-internal.json  silabs-builds-mg24-ota.json  silabs-builds-mg24-trustzone.json  silabs-builds-mg24.json  silabs-builds-mg26-internal.json  silabs-builds-mg26-ota.json  silabs-builds-mg26.json  silabs-builds-mgm24-internal.json  silabs-builds-mgm24.json  silabs-builds-mgm26-internal.json  silabs-builds-mgm26-ota.json  silabs-builds-ncp-brd4357a.json  silabs-builds-ncp.json  silabs-builds-series-3-bootloader.json  silabs-builds-siwx-ota.json  silabs-builds-siwx.json  silabs-builds-sixg301.json  silabs-code-size-wifi.json  silabs-code-size.json  test_permissions.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CLA-Assistant.yml  build-copy-contents.yaml  build-linux-tools.yaml  build-ot-rcp.yaml  build-sqa-tools.yaml  build-zephyr.yaml  builder.yaml  chip-pyenv-arm64.yaml  ci.yml  cleanup-artifacts.yml  main.yaml  (+47 more)
Docker/: Dockerfile
docs/: CHERRY_PICKING_CSA_COMMITS.md
internal/: Jenkinsfile  config.py  jenkinsFunctions.groovy
jenkins/: jenkinsFunctions.groovy
jenkins-integration/: Jenkinsfile  jenkinsFunctions.groovy  utils.py
jenkins_integration/: Jenkinsfile  commit_change_summary.sh  config.py  jenkinsFunctions.groovy  utils.py
provision/: .gitignore  README.md  defaults.json  devices.yaml  versions.yaml
silabs_utils/: init_matter_multipan.cpp  init_matter_multipan.h  openthread_instance_handler.cpp  openthread_instance_handler.h  performance_test_commands.cpp
slc/: build.py  build.sh  copied_sl_create_new_app.py  copy-extension.sh  sl_build.py  sl_create_new_app.py  sl_project_upgrade.py  sl_run_zaptool.py  sl_setup_env.py  stage_extension.py
slc/apps/bootloaders/bootloader_storage_single_4096k_series_3/matter_bootloader/cmake_llvm/: CMakeLists.txt  CMakePresets.json  matter_bootloader_internal_series_3.cmake  toolchain.cmake
(+3631 files in other folders)
